fix: fixed tab curves on tablet

--- a/components/organisms/Sidebar/sidebar.module.scss
+++ b/components/organisms/Sidebar/sidebar.module.scss
@@ -350,11 +350,18 @@
 
 
       &:nth-of-type(2) {
-        border-bottom-left-radius: 0;
+        &:before {
+          display: none;
+        }
+      }
+
+      &.active:nth-of-type(2) {
+        border-bottom-left-radius:0;
         &:before {
           top: auto;
           left: -23px;
           bottom: 0;
+          display: block;
         }
       }
 
